web-britlearnacademy/Web-APP/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: britlearn-academy-app
  labels:
    app: britlearn-app
