web-britlearnacademy/Web-APP/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: britlearn-app
  namespace: britlearn-academy-app
spec:
  type: ClusterIP
  selector:
    app: britlearn-app
    slot: blue
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
