web-britlearnacademy/Web-APP/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: britlearn-app-ingress
  namespace: britlearn-academy-app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-set-headers: "britlearn-academy-app/britlearn-app-proxy-headers"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - britlearnacademy.online
      secretName: britlearn-app-tls
  rules:
    - host: britlearnacademy.online
      http:
        paths:
          - path: /app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: britlearn-app
                port:
                  number: 80
